--- a/app/index.html
+++ b/app/index.html
@@ -104,6 +104,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/services/gist.js"></script>
+        <script src="scripts/services/thingapi.js"></script>
         <!-- endbuild -->
 </body>
 </html>
