--- a/app/index.html
+++ b/app/index.html
@@ -32,14 +32,6 @@
     <!-- endbuild -->
   </head>
   <body ng-app="steelhorseadventuresApp">
-    <div id="fb-root"></div>
-    <script>(function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v2.9";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -57,7 +49,10 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#!/">steel horse adventures</a>
+            <a class="navbar-brand" href="#!/">
+              <img src="images/bike24.png" alt="steel horse" />
+              steel horse adventures
+            </a>
           </div>
         </div>
       </div>
