--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
   <head>
     <meta charset="utf-8">
     <title></title>
@@ -30,6 +30,9 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
+    <meta property="og:image" content="https://lh3.googleusercontent.com/4pA-GpcwCEcUfPn-4CdNj8Oe3vhNoq12vQm9mwQ-C-23QV28mA2Cguo82HMCoIcTe4P5zb9ZDUhwyEYm-IR8BUwa3I0IsVqNwW_ZGwuiHw7sWhbUdJVB0rHaGxtQHn5AP9Dc4XTeNsp8jrPy4MUfuFsgaxZWMoj3DtXgeuu4wnc9eVejgM0Ru1Q1NY9UhfNbRr-INbeZ3BY0BOs3ZScAyMoSrJu0ZrvaIxSdc8BKN5kkXdlzt6StRHDqTz1F7IuTBRXMpkFSpQhD4VkwDP5EUPvMGS3LLuMZIyIakEb9yx4N-5JXo6eq-YlfIHjm9kPq6cAwArfxAlczi5L0DAUTWmP3KSf4vnru5oTuenA5crRZCgyIzUhDBKXYiOsuq-RmlmPG_2BluJVHCNTvWmlC0BnL311zXfRBnGc_UoGbpqM7_Vq-K0TyksqY-qMNonALeJfdCKtDWeiACor-mzlqdn4wPN-8MKAjqNz3rXWrSRGBUAALXFAwfFAfG4PSZGOBW0gWjt8XHd4NJpSZBjUGoDAM6EHHVdeKXbw4uoziouQZUX7gW22MBuWivMYZSuo-6diFg8lsrQd14Di51ETXvdhkz7OAVKP5qjPE1i2c-3AuA-ZFqAM1WUoNdHNsKdcj1Yv7sBbf02R4LRSYcpxmA91zlQ21yUkUErbDdHsap1I=w1415-h352-no" />
+    <meta property="og:image:width" content="1415" />
+    <meta property="og:image:height" content="352" />
   </head>
   <body ng-app="steelhorseadventuresApp">
     <!--[if lte IE 8]>
