--- a/app/index.html
+++ b/app/index.html
@@ -88,6 +88,7 @@
        ga('send', 'pageview');
     </script>
 
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyCgYpm3TCg5uzjWTtv8DjQg4ukWCpb-PyA"></script>
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -102,6 +103,7 @@
     <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/ui-leaflet/dist/ui-leaflet.js"></script>
+    <script src="bower_components/ng-map-autocomplete/src/ng-map-autocomplete.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -113,6 +115,7 @@
         <script src="scripts/services/thingapi.js"></script>
         <script src="scripts/controllers/tools.js"></script>
         <script src="scripts/directives/detectactivetab.js"></script>
+        <script src="scripts/services/routeapi.js"></script>
         <!-- endbuild -->
 </body>
 </html>
