--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/leaflet/dist/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/ng-image-gallery/dist/ng-image-gallery.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -104,6 +105,8 @@
     <script src="bower_components/leaflet/dist/leaflet-src.js"></script>
     <script src="bower_components/ui-leaflet/dist/ui-leaflet.js"></script>
     <script src="bower_components/ng-map-autocomplete/src/ng-map-autocomplete.js"></script>
+    <script src="bower_components/hammerjs/hammer.js"></script>
+    <script src="bower_components/ng-image-gallery/dist/ng-image-gallery.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
